<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/artFragment">

    <fragment
        android:id="@+id/artFragment"
        android:name="com.amlavati.artbook.view.ArtFragment"
        android:label="ArtFragment" >
        <action
            android:id="@+id/action_artFragment_to_artDetailFragment"
            app:destination="@id/artDetailFragment" />
        <action
            android:id="@+id/action_artFragment_to_imageApiFragment"
            app:destination="@id/imageApiFragment" />
    </fragment>
    <fragment
        android:id="@+id/artDetailFragment"
        android:name="com.amlavati.artbook.view.ArtDetailFragment"
        android:label="ArtDetailFragment" >
        <action
            android:id="@+id/action_artDetailFragment_to_imageApiFragment"
            app:destination="@id/imageApiFragment" />
        <action
            android:id="@+id/action_artDetailFragment_to_artFragment"
            app:destination="@id/artFragment" />
    </fragment>
    <fragment
        android:id="@+id/imageApiFragment"
        android:name="com.amlavati.artbook.view.ImageApiFragment"
        android:label="ImageApiFragment" >
        <action
            android:id="@+id/action_imageApiFragment_to_artDetailFragment"
            app:destination="@id/artDetailFragment" />
    </fragment>

</navigation>